--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,8 @@
 name: Build application
 
-on:
-  push:
-  pull_request:
-  schedule:
-    - cron: '0 12 * * *'
+on: [push, pull_request]
+#  schedule:
+#    - cron: '0 12 * * *'
 
 jobs:
   ubuntu-gcc-build:
